--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -23,18 +23,20 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/employee-manager/pages/index.jsf">Employee-manager</a>
+				<a class="navbar-brand" href="/template-JSF-CDI-EJB/employee/create.jsf">Employee-manager</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="#{indexActive}"><a href="/employee-manager/pages/index.jsf"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
-					<li class="#{employesActive}"><a href="/employee-manager/pages/employes/"><span class="glyphicon glyphicon-user"></span> Employes</a></li>
+					<li class="#{indexActive}"><a href="/template-JSF-CDI-EJB/employee/create.jsf"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
+					<li class="#{employesActive}"><a href="/template-JSF-CDI-EJB/employee/list.jsf"><span class="glyphicon glyphicon-user"></span> Employes</a></li>
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
 		</div>
 	</div>
-
+	
+		<h:outputText value="#{globalMB.meteo}" />
+		
 	<div class="container">
 		<ui:insert name="body"></ui:insert>
 	</div>
